[project]
name = "gsf_survey"
version = "1.0.8"
authors = [
  { name="Paul Kennedy", email="pktrigg@gmail.com" },
]
description = "python library for reading GSF binary files containing survey data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gsf_survey"]

[project.urls]
Homepage = "https://github.com/pktrigg/gsf_survey"
Issues = "https://github.com/pktrigg/gsf_survey/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
